@@ -16,7 +16,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @JsonInclude(JsonInclude.Include.NON_NULL)
 @JsonIgnoreProperties(ignoreUnknown = true)
@@ -148,7 +147,7 @@ public class CategorySettings {
     protected void writeData(MCByteBuf byteBuf) {
         writeStringArray(new ArrayList<>(this.groups), byteBuf);
         writeStringArray(new ArrayList<>(this.namespaces), byteBuf);
-        writeStringArray(this.recipes.stream().map(NamespacedKey::toString).collect(Collectors.toList()), byteBuf);
+        writeStringArray(this.recipes.stream().map(NamespacedKey::toString).toList(), byteBuf);
     }
 
     protected void writeStringArray(List<String> values, MCByteBuf byteBuf) {
