@@ -24,7 +24,6 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class DataHandler {
 
@@ -85,7 +84,7 @@ public class DataHandler {
 
     public void loadRecipesAndItems() {
         if (!customCrafting.getConfigHandler().getConfig().getDisabledRecipes().isEmpty()) {
-            getDisabledRecipes().addAll(customCrafting.getConfigHandler().getConfig().getDisabledRecipes().parallelStream().map(NamespacedKey::of).collect(Collectors.toList()));
+            getDisabledRecipes().addAll(customCrafting.getConfigHandler().getConfig().getDisabledRecipes().parallelStream().map(NamespacedKey::of).toList());
         }
         load(true);
         categories.index();
@@ -157,7 +156,7 @@ public class DataHandler {
         }
     }
 
-    public void onSave() {
+    public void saveDisabledRecipes() {
         customCrafting.getConfigHandler().getConfig().setDisabledRecipes(disabledRecipes);
         customCrafting.getConfigHandler().getConfig().save();
     }
@@ -233,13 +232,13 @@ public class DataHandler {
                     return ((Keyed) recipe).getKey().getNamespace().equals("minecraft");
                 }
                 return false;
-            }).sorted(Comparator.comparing(recipe -> ((Keyed) recipe).getKey().toString())).collect(Collectors.toList());
+            }).sorted(Comparator.comparing(recipe -> ((Keyed) recipe).getKey().toString())).toList();
         }
         return Collections.unmodifiableList(minecraftRecipes);
     }
 
     public List<String> getBukkitNamespacedKeys() {
-        return getMinecraftRecipes().stream().filter(recipe -> recipe instanceof Keyed).map(recipe -> NamespacedKey.fromBukkit(((Keyed) recipe).getKey()).toString()).collect(Collectors.toList());
+        return getMinecraftRecipes().stream().filter(recipe -> recipe instanceof Keyed).map(recipe -> NamespacedKey.fromBukkit(((Keyed) recipe).getKey()).toString()).toList();
     }
 
     @Deprecated
