@@ -29,7 +29,6 @@ import org.bukkit.inventory.ItemStack;
 import java.util.HashMap;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class GrindStoneListener implements Listener {
 
@@ -215,7 +214,7 @@ public class GrindStoneListener implements Listener {
         CustomRecipeGrindstone foundRecipe = null;
         boolean validItem = false;
 
-        for (CustomRecipeGrindstone customRecipeGrindstone : Registry.RECIPES.getAvailable(Types.GRINDSTONE, player).stream().filter(grindstoneRecipe -> grindstoneRecipe.checkConditions(new Conditions.Data(player, player.getTargetBlock(null, 5), inventoryView))).collect(Collectors.toList())) {
+        for (CustomRecipeGrindstone customRecipeGrindstone : Registry.RECIPES.getAvailable(Types.GRINDSTONE, player).stream().filter(grindstoneRecipe -> grindstoneRecipe.checkConditions(new Conditions.Data(player, player.getTargetBlock(null, 5), inventoryView))).toList()) {
             Ingredient input = slot == 0 ? customRecipeGrindstone.getInputTop() : customRecipeGrindstone.getInputBottom();
             Ingredient otherInput = slot == 0 ? customRecipeGrindstone.getInputBottom() : customRecipeGrindstone.getInputTop();
             Optional<CustomItem> optional = input.check(item, customRecipeGrindstone.isExactMeta());
